@@ -16,24 +16,24 @@
 		<tr class="###ODD_CLASS###">
 			<td class="###ICON_CLASS###">###ICON###</td>
 			<td class="###FILENAME_CLASS###">
-				###FILENAME###&nbsp;<span class="###NEWFILE_CLASS###">###NEWFILE###</span>
+				<!--###LINK_FILE###-->###FILENAME###<!--###LINK_FILE###-->&nbsp;<span class="###NEWFILE_CLASS###">###NEWFILE###</span>
 			</td>
 			<td class="###INFO_CLASS###">###INFO###</td>
 			<td class="###DATE_CLASS###">###DATE###</td>
 		</tr>
 		<!-- ###ODD_TEMPLATE### [end] -->
-	
+
 		<!-- ###EVEN_TEMPLATE### [start] -->
 		<tr class="###EVEN_CLASS###">
 			<td class="###ICON_CLASS###">###ICON###</td>
 			<td class="###FILENAME_CLASS###">
-				###FILENAME###&nbsp;<span class="###NEWFILE_CLASS###">###NEWFILE###</span>
+				<!--###LINK_FILE###-->###FILENAME###<!--###LINK_FILE###-->&nbsp;<span class="###NEWFILE_CLASS###">###NEWFILE###</span>
 			</td>
 			<td class="###INFO_CLASS###">###INFO###</td>
 			<td class="###DATE_CLASS###">###DATE###</td>
 		</tr>
 		<!-- ###EVEN_TEMPLATE### [end] -->
-		
+
 		<!-- ###BODY### [end] -->
 	</tbody>
 </table>
