@@ -159,7 +159,8 @@ class tx_filelist_pi1 extends tslib_pibase {
 				$markers['###ICON###'] .= '<img src="' . $this->settings['iconsPathFolders'] . 'folder.png" alt="' . $directories[$i]['name'] . '" border ="0" />';
 			}
 			$markers['###ICON###'] .= '</a>';
-			$markers['###FILENAME###'] = '<a href="' . $this->getLink(array('path' => substr($directories[$i]['path'], strlen($this->settings['path'])))) . '">' . $directories[$i]['name'] . '</a>';
+			$markers['###FILENAME###'] = $directories[$i]['name'];
+			$markers['###PATH###'] = substr($directories[$i]['path'], strlen($this->settings['path']));
 			$markers['###NEWFILE###'] = '';
 			$markers['###INFO###'] = '';
 			if (isset($directories[$i]['size'])) {
@@ -184,7 +185,18 @@ class tx_filelist_pi1 extends tslib_pibase {
 				}
 			}
 
-			$rows[] = $this->cObj->substituteMarkerArray($odd ? $this->templates['odd'] : $this->templates['even'], $markers);
+			$wrappedSubpartArray['###LINK_FILE###'] = array(
+				'<a href="' . $this->getLink(array('path' => substr($directories[$i]['path'], strlen($this->settings['path'])))) . '">',
+				'</a>'
+			);
+
+			$row = $this->cObj->substituteMarkerArrayCached(
+				$odd ? $this->templates['odd'] : $this->templates['even'],
+				$markers,
+				array(),
+				$wrappedSubpartArray
+			);
+			$rows[] = $row;
 			$odd = !$odd;
 		}
 
@@ -204,7 +216,8 @@ class tx_filelist_pi1 extends tslib_pibase {
 		for ($i = 0; $i < count($files); $i++) {
 			$markers = array();
 			$markers['###ICON###'] = $this->cObj->typolink('<img src="' . $this->settings['iconsPathFiles'] . $this->getFileTypeIcon($files[$i]['name']) . '" alt="' . $files[$i]['name'] . '">', array('parameter' => tx_filelist_helper::generateProperURL($files[$i]['path'])));
-			$markers['###FILENAME###'] = $this->cObj->typolink($files[$i]['name'], array('parameter' => tx_filelist_helper::generateProperURL($files[$i]['path'])));
+			$markers['###FILENAME###'] = $files[$i]['name'];
+			$markers['###PATH###'] = $files[$i]['path'];
 			$markers['###NEWFILE###'] = ($this->settings['new_duration'] > 0) ? $this->getNewFileText($files[$i]['path'], $this->settings['new_duration']) : '';
 			$markers['###INFO###'] = $this->getHRFileSize($files[$i]['path']);
 			$markers['###DATE###'] = t3lib_BEfunc::datetime(filemtime($listingPath . $files[$i]['name']));
@@ -216,7 +229,15 @@ class tx_filelist_pi1 extends tslib_pibase {
 					$markers = $_procObj->extraItemMarkerProcessor($markers, $files[$i], $this);
 				}
 			}
-			$rows[] = $this->cObj->substituteMarkerArray($odd ? $this->templates['odd'] : $this->templates['even'], $markers);
+			$wrappedSubpartArray['###LINK_FILE###'] = $this->cObj->typolinkWrap(array('parameter' => tx_filelist_helper::generateProperURL($files[$i]['path'])));
+
+			$row = $this->cObj->substituteMarkerArrayCached(
+				$odd ? $this->templates['odd'] : $this->templates['even'],
+				$markers,
+				array(),
+				$wrappedSubpartArray
+			);
+			$rows[] = $row;
 			$odd = !$odd;
 		}
 
